tests/ui/generic-associated-types/issue-90014-tait.stderr
error: internal compiler error: no errors encountered even though `delay_span_bug` issued

error: internal compiler error[E0391]: cycle detected when computing function signature of `<impl at $DIR/issue-90014-tait.rs:20:1: 20:13>::make_fut`
  --> $DIR/issue-90014-tait.rs:23:5
   |
LL |     fn make_fut<'a>(&'a self) -> Self::Fut<'a> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing the variances of `Foo`...
  --> $DIR/issue-90014-tait.rs:18:1
   |
LL | struct Foo<'a>(&'a mut ());
   | ^^^^^^^^^^^^^^
   = note: ...which requires computing the variances for items in this crate...
   = note: ...which again requires computing function signature of `<impl at $DIR/issue-90014-tait.rs:20:1: 20:13>::make_fut`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/issue-90014-tait.rs:1:1
   |
LL | / //! This test is reporting the wrong error. We need
LL | | //! more inherent associated type tests that use opaque types
LL | | //! in general. Some variant of this test should compile successfully.
LL | |
...  |
LL | |
LL | | fn main() {}
   | |____________^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information
note: delayed at compiler/rustc_query_system/src/query/job.rs:602:16 - disabled backtrace
  --> $DIR/issue-90014-tait.rs:23:5
   |
LL |     fn make_fut<'a>(&'a self) -> Self::Fut<'a> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

query stack during panic:
end of query stack
error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0391`.
